# containercp

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  INSTALL.md  MAIL_IMPLEMENTATION_PLAN.md  PROJECT.md  README.md  RESEARCH_VESTA_RESTORE.md  SESSION_STATE.txt
.github/workflows/: build-test.yml
app/containercp/: main.cpp
app/containercpd/: bootstrap_server.cpp  main.cpp
build-db2/: .ninja_deps  .ninja_log  build.ninja
build-db3/: .ninja_deps  .ninja_log  build.ninja
build-db4/: .ninja_deps  .ninja_log  build.ninja
build_chk/: .ninja_deps  .ninja_log  build.ninja
build_prev/: .ninja_deps  .ninja_log  build.ninja
docker/mail/: Dockerfile.dovecot  Dockerfile.opendkim  Dockerfile.postfix  Dockerfile.rspamd  Dockerfile.snappymail  docker-entrypoint-dovecot.sh  docker-entrypoint-opendkim.sh  docker-entrypoint-rspamd.sh  docker-entrypoint-snappymail.sh  docker-entrypoint.sh
docker/php/: Dockerfile
docs/: ARCHITECTURE.md  PRODUCTION_CHECKLIST.md  ROADMAP.md  SFTP-PROVIDER.md  TECH_STACK.md  TEMPLATES.md  WEB-UI.md  admin-proxy-connectivity-analysis.md  admin-recovery-architecture.md  ensure-central-proxy-analysis.md  implementation-checklist.md  mail-module-plan.md  mail-php-integration-plan.md  mail-routing-design.md  php-mail-regression-tests.md  proxy-page-redesign.md  recovery-architecture-vs-bootstrap.md  release-notes-v0.6.0.md  reverse-proxy-architecture.md  runtime-architecture.md  sqlite-activation-runbook.md  startup-architecture-review.md  testing.md  user-acceptance-checklist.md
docs/ADR/: ADR-0001-control-plane-node.md  ADR-0002-hosting-provider-runtime.md  ADR-003-LetsEncrypt.md  ADR-004-REST-API.md  ADR-005-Daemon-Architecture.md  ADR-006-Web-Server-Template-Profiles.md  ADR-007-m365-split-delivery.md
docs/api/: API_REFERENCE.md
docs/changelog/: early-development.md  rc2-stability.md  runtime-phases.md  ssl-subsystem.md
docs/development/: api-rules.md  coding-rules.md  connection-pool-lifecycle.md  database-aware-backups.md  database-import-export.md  database-lifecycle.md  legacy-archive-api.md  (+16 more)
packaging/: containercp.service
planning/: ARCH-009-CHECKLIST.md  ARCH-009-IMPLEMENTATION-PLAN.md  ARCH-009-PHASE3-DESIGN.md  ARCH-009-VALIDATION.md  LESSONS_LEARNED_RC1.md  MYVESTA_SITE_IMPORT_PLAN.md  PRODUCT_VISION.md  TEST_ENVIRONMENT.md  admin-panel-https.md  backlog.md  backup-and-restore.md  backup-review.md  database-module-architecture.md  database-module-v0.7.1-architecture.md  database-module-v0.7.1-implementation-plan.md  database-module-v0.7.1-open-source-review.md  database-module-v0.7.1-threat-model.md  database-module-v0.8-architecture.md  database-module-v0.8-implementation-plan.md  database-module-v0.8-open-source-review.md  database-module-v0.8-threat-model.md  frontend-modularization-architecture.md  frontend-modularization-baseline.md  frontend-modularization-checklist.md  mail-hardening-plan.md  migration-workflow-analysis-unity-2026-07-22.txt  multi-site-validation.md  product-roadmap.md  product-validation.md  project-status.md  proxy-page-redesign.md  roadmap-post-v0.6.0.md  sites-runtime-management.md  sprint-02-php-hosting-mvp.md  sprint-02-review.md  sprint-03-infrastructure-compatibility.md  sprint-03-review.md  sprint-04-production-ready.md  sprint-04-review.md  sprint-05-review.md  (+14 more)
scripts/: check-frontend-baseline.js  install.sh  selftest.sh  test-backup-actions.js  test-database-drop-modal.js  test-database-transfer-actions.js  test-mail-integration.sh  test-mail-routing.sh  update.sh
tasks/: API-001.md  API-002.md  API-003.md  API-004.md  BACKUP-001.md  BACKUP-002.md  BACKUP-003.md  BACKUP-004.md  BACKUP-005.md  BACKUP-006.md  BACKUP-007.md  BACKUP-008.md  CCP-0001.md  CCP-0002.md  CCP-0003.md  CCP-1001.md  CCP-1002.md  CCP-1003.md  CCP-1004.md  CCP-1005.md  CCP-1006.md  CCP-1007.md  CCP-2001.md  CCP-2002.md  CCP-2003.md  CCP-2004.md  CCP-2005.md  CCP-2006.md  CCP-2007.md  CCP-2008.md  CCP-3001.md  CCP-3002.md  CCP-3003.md  CCP-3004.md  CCP-3005.md  CCP-3006.md  CCP-4001.md  CCP-4002.md  CCP-4003.md  CCP-4004.md  (+3 more)
tests/: CMakeLists.txt  test_access.cpp  test_acme_crash.cpp  test_api.cpp  test_auth_security.cpp  test_backup.cpp  test_cert_store.cpp  test_daemon.cpp  test_database_credential_rotation.cpp  test_database_dump_service.cpp  test_database_lifecycle.cpp  test_database_view_service.cpp  test_dns_api.cpp  test_dns_service.cpp  test_fixture_loader.cpp  test_health.cpp  test_importer.cpp  test_managers.cpp  test_mariadb_credential_provider.cpp  test_migrate_sqlite.cpp  test_migration.cpp  test_migration_api.cpp  test_path_utils.cpp  test_proxy.cpp  test_rollback_integration.cpp  test_runtime.cpp  test_runtime_sync.cpp  test_schema.cpp  test_site_database_volume_guard.cpp  test_spf_analyzer.cpp  test_sql_console_adminer_provider.cpp  test_sql_console_session.cpp  test_sqlite_storage.cpp  test_ssl.cpp  test_storage.cpp  test_template.cpp  test_validator.cpp  test_version.cpp  test_wordpress_config_detector.cpp  test_wordpress_config_service.cpp  (+3 more)
tests/fixtures/v0.6.0/: README.md
tests/fixtures/v0.6.0/legacy/: mail_domains_10field.db  sites_5field.db  ssl_certificates_4field.db  template_profiles.db
tests/fixtures/v0.6.0/malformed/: delimiter_collision.db  duplicate_id.db  invalid_delimiter.db  invalid_int.db  multiline_corruption.db  truncated_record.db  wrong_field_count.db
tests/fixtures/v0.6.0/normal/: access_grants.db  access_users.db  auth_users.db  backups.db  databases.db  domains.db  mail_aliases.db  mail_domains.db  mail_mailboxes.db  mail_smarthost.db  nodes.db  php_versions.db  profiles.db  reverse_proxies.db  sites.db  ssl_certificates.db  users.db
tests/fixtures/v0.6.0/production_derived/: README.md  auth_users.db  backups.db  databases.db  domains.db  mail_domains.db  mail_mailboxes.db  mail_smarthost.db  php_versions.db  profiles.db  reverse_proxies.db  sites.db  users.db
tests/fixtures/v0.6.0/sentinels/: backups_orphan.db  domains_site0.db  mail_domains_external.db  reverse_proxies_site0.db  sites_node0.db
web/: app.js  domain-detail-demo.html  index.html  style.css
(+402 files in other folders)
