add_executable(containercp_tests
    main.cpp
    test_fixture_loader.cpp
    test_importer.cpp
    test_migration.cpp
    test_schema.cpp
    test_sqlite_storage.cpp
    test_validator.cpp
    test_managers.cpp
    test_access.cpp
    test_proxy.cpp
    test_ssl.cpp
    test_cert_store.cpp
    test_storage.cpp
    test_api.cpp
    test_daemon.cpp
    test_dns_service.cpp
    test_dns_api.cpp
    test_spf_analyzer.cpp
    test_template.cpp
    test_runtime.cpp
    test_runtime_sync.cpp
    test_health.cpp
    test_backup.cpp
    test_migration.cpp
    test_migration_api.cpp
    test_migrate_sqlite.cpp
    test_version.cpp
    test_wordpress_config_types.cpp
    test_rollback_integration.cpp
    ${CMAKE_SOURCE_DIR}/libs/migration/VestaSiteImporter.cpp
    ${CMAKE_SOURCE_DIR}/libs/config/Config.cpp
    ${CMAKE_SOURCE_DIR}/libs/filesystem/Filesystem.cpp
    ${CMAKE_SOURCE_DIR}/libs/utils/Validator.cpp
    ${CMAKE_SOURCE_DIR}/libs/utils/StringUtils.cpp
    ${CMAKE_SOURCE_DIR}/libs/utils/PasswordGenerator.cpp
    ${CMAKE_SOURCE_DIR}/libs/user/User.cpp
    ${CMAKE_SOURCE_DIR}/libs/user/UserManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/site/Site.cpp
    ${CMAKE_SOURCE_DIR}/libs/site/SiteManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/domain/Domain.cpp
    ${CMAKE_SOURCE_DIR}/libs/domain/DomainManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/domain/DomainViewService.cpp
    ${CMAKE_SOURCE_DIR}/libs/dns/DnsCheckService.cpp
    ${CMAKE_SOURCE_DIR}/libs/dns/DnsCheckHandler.cpp
    ${CMAKE_SOURCE_DIR}/libs/api/SitesViewService.cpp
    ${CMAKE_SOURCE_DIR}/libs/dns/SpfAnalyzer.cpp
    ${CMAKE_SOURCE_DIR}/libs/network/NetworkService.cpp
    ${CMAKE_SOURCE_DIR}/libs/database/DatabaseManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/database/Database.cpp
    ${CMAKE_SOURCE_DIR}/libs/access/AccessUser.cpp
    ${CMAKE_SOURCE_DIR}/libs/access/AccessUserManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/access/AccessGrant.cpp
    ${CMAKE_SOURCE_DIR}/libs/access/AccessGrantManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/proxy/ProxyConfigBuilder.cpp
    ${CMAKE_SOURCE_DIR}/libs/proxy/ReverseProxy.cpp
    ${CMAKE_SOURCE_DIR}/libs/proxy/ReverseProxyManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/ssl/SslCertificate.cpp
    ${CMAKE_SOURCE_DIR}/libs/ssl/SslCertificateManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/ssl/AcmeClient.cpp
    ${CMAKE_SOURCE_DIR}/libs/ssl/CertificateStore.cpp
    ${CMAKE_SOURCE_DIR}/libs/ssl/PemCertificateProvider.cpp
    ${CMAKE_SOURCE_DIR}/libs/ssl/HTTP01ChallengeProvider.cpp
    ${CMAKE_SOURCE_DIR}/libs/storage/Storage.cpp
    ${CMAKE_SOURCE_DIR}/libs/storage/SQLiteWrapper.cpp
    ${CMAKE_SOURCE_DIR}/libs/storage/ConnectionPool.cpp
    ${CMAKE_SOURCE_DIR}/libs/storage/MigrationEngine.cpp
    ${CMAKE_SOURCE_DIR}/libs/storage/LegacyImporter.cpp
    ${CMAKE_SOURCE_DIR}/libs/storage/LegacyDatasetReader.cpp
    ${CMAKE_SOURCE_DIR}/libs/storage/LegacyArchive.cpp
    ${CMAKE_SOURCE_DIR}/libs/storage/Verification.cpp
    ${CMAKE_SOURCE_DIR}/libs/storage/MigrationOrchestrator.cpp
    ${CMAKE_SOURCE_DIR}/libs/storage/SchemaMigrations.cpp
    ${CMAKE_SOURCE_DIR}/libs/storage/SQLiteStorage.cpp
    ${CMAKE_SOURCE_DIR}/libs/node/Node.cpp
    ${CMAKE_SOURCE_DIR}/libs/core/Resource.cpp
    ${CMAKE_SOURCE_DIR}/libs/api/Router.cpp
    ${CMAKE_SOURCE_DIR}/libs/api/Response.cpp
    ${CMAKE_SOURCE_DIR}/libs/api/JsonFormatter.cpp
    ${CMAKE_SOURCE_DIR}/libs/daemon/CommandProtocol.cpp
    ${CMAKE_SOURCE_DIR}/libs/template/TemplateEngine.cpp
    ${CMAKE_SOURCE_DIR}/libs/profile/ProfileManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/backup/Backup.cpp
    ${CMAKE_SOURCE_DIR}/libs/backup/BackupManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/backup/TarBackupProvider.cpp
    ${CMAKE_SOURCE_DIR}/libs/logger/Logger.cpp
    ${CMAKE_SOURCE_DIR}/libs/jobs/JobManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/jobs/JobExecutor.cpp
    ${CMAKE_SOURCE_DIR}/libs/runtime/CommandExecutor.cpp
    ${CMAKE_SOURCE_DIR}/libs/runtime/RuntimeActionExecutor.cpp
    ${CMAKE_SOURCE_DIR}/libs/runtime/RuntimeSynchronizer.cpp
    ${CMAKE_SOURCE_DIR}/libs/runtime/HealthReport.cpp
    ${CMAKE_SOURCE_DIR}/libs/runtime/ServiceRole.cpp
    ${CMAKE_SOURCE_DIR}/libs/runtime/SiteRuntimeManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/runtime/DockerRuntime.cpp
    ${CMAKE_SOURCE_DIR}/libs/provider/DockerComposeProvider.cpp
    ${CMAKE_SOURCE_DIR}/libs/php/PhpVersion.cpp
    ${CMAKE_SOURCE_DIR}/libs/php/PhpVersionManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/docker/ComposeGenerator.cpp
    ${CMAKE_SOURCE_DIR}/libs/docker/EnvGenerator.cpp
    ${CMAKE_SOURCE_DIR}/libs/filesystem/SiteLayout.cpp
    ${CMAKE_SOURCE_DIR}/libs/template/TemplateEngine.cpp
    ${CMAKE_SOURCE_DIR}/libs/operations/SiteCreateOperation.cpp
    ${CMAKE_SOURCE_DIR}/libs/wordpress/WordPressConfigTypes.cpp
    ${CMAKE_SOURCE_DIR}/libs/mail/MailAliasManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/mail/DkimManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/mail/MailDomain.cpp
    ${CMAKE_SOURCE_DIR}/libs/mail/MailModuleState.cpp
    ${CMAKE_SOURCE_DIR}/libs/mail/MailDomainManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/mail/MailPasswordHasher.cpp
    ${CMAKE_SOURCE_DIR}/libs/mail/MailboxManager.cpp
    ${CMAKE_SOURCE_DIR}/libs/mail/providers/DockerMailProvider.cpp
)

target_include_directories(containercp_tests PRIVATE
    ${CMAKE_SOURCE_DIR}/libs
)

target_compile_options(containercp_tests PRIVATE
    -Wall
    -Wextra
    -Wpedantic
)

target_compile_definitions(containercp_tests PRIVATE
    TEST_FIXTURE_DIR="${CMAKE_SOURCE_DIR}/tests/fixtures"
    TEST_SOURCE_DIR="${CMAKE_SOURCE_DIR}"
    CONTAINERCP_CLI_BINARY="$<TARGET_FILE:containercp>"
    CONTAINERCP_DAEMON_BINARY="$<TARGET_FILE:containercpd>"
    CMAKE_PROJECT_VERSION_TEXT="${PROJECT_VERSION}"
)

add_dependencies(containercp_tests containercp containercpd)

target_link_libraries(containercp_tests PRIVATE
    cares
    curl
    ssl
    crypto
    crypt
    SQLite::SQLite3
)

add_test(NAME containercp_tests COMMAND containercp_tests)
